Fixed text wrap bug in extension panel

--- a/src/devtools/views/Element.css
+++ b/src/devtools/views/Element.css
@@ -3,6 +3,7 @@
   border-radius: 0.25em;
   cursor: pointer;
   position: relative;
+  white-space: nowrap;
 }
 .Element:hover {
   background-color: var(--color-state03);
